Fix footer overflow

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,6 +7,10 @@ $gray: #888;
 $redish: #d35266;
 
 //Global clases
+.hide {
+  overflow: hidden;
+}
+
 .fs-1 {
   font-size: 1rem;
 }
